Sun Jul 25 20:34:35 2004 GMT  TAKAHASHI Kaoru  <kaoru@kaisei.org>

	* gnubg.c (Convert): Suppress compiler warnings. Synch with
	iconv() prototype.

Sun Jul 25 19:19:41 2004 GMT  TAKAHASHI Kaoru  <kaoru@kaisei.org>

	* rollout.h: Suppress compiler warnings; static declaration for
	`nSkip' follows non-static.

Sun Jul 25 18:15:47 UTC 2004 Jim Segrave   <jes@jes-2.demon.nl>

	* gtkexport.c - fix handling of cube export settings (typo and 
	  corrections for unused entries)

Mon Jul 19 09:53:10 CEST 2004  Joern Thyssen  <jth@gnubg.org>

	* gnubg.c (real_main): initialise random seed for rollout
	RNG.
	(bug reported by Chuck Bower, fix suggested by Jim)

Mon Jul 12 22:48:32 CEST 2004  Petr Kadlec  <mormegil@centrum.cz>

        * gtkprefs.c (ImportDesign): Use ngettext.
        * html.c (HTMLBoardHeader): Ditto.

Sun Jul 11 16:37:02 2004 GMT  TAKAHASHI Kaoru  <kaoru@kaisei.org>

	* eval.c (EvalInitialise): Suppress compiler warnings.

Sun Jul 11 14:47:30 2004 GMT  TAKAHASHI Kaoru  <kaoru@kaisei.org>

	* gtkgame.c: include <ctype.h> for isspace().

Sun Jul 11 14:42:51 2004 GMT  TAKAHASHI Kaoru  <kaoru@kaisei.org>

	* dice.h: Added extern UserRNGOpen();

Sun Jul 11 13:30:11 2004 GMT  TAKAHASHI Kaoru  <kaoru@kaisei.org>

	* htmlimages.c: include <malloc.h>.

Sun Jul 11 12:07:25 CEST 2004  Joern Thyssen  <jth@gnubg.org>

	* external.c: pacify fussy compilers.

Sun Jul 11 07:17:35 2004 GMT  TAKAHASHI Kaoru  <kaoru@kaisei.org>

	* gnubg.c (DisplayTimeAnalysis, ShowBoard, CommandCopy): Use
	ngettext.  And tabify.
	* gtkboard.c (ReturnHits): Ditto.
	* gtkgame.c (TimeAnalysis, GTKShowScoreSheet): Ditto.
	* html.c (HTMLPrologue, ExportGameHTML): Ditto.
	* html.c (ExportPositionGammOnLine): Ditto.
	* play.c (ApplyMoveRecord): Ditto.

Sat Jul 10 14:35:26 2004 GMT  TAKAHASHI Kaoru  <kaoru@kaisei.org>

	* gtkoptions.c (aaszLang): Use ja_JP instead of ja_JA.  Added
	ru_RU.

Sat Jul 10 08:17:26 2004 GMT  TAKAHASHI Kaoru  <kaoru@kaisei.org>
